--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 #custom_ignores
 shopbotbackend/jarvis/config.py
-.idea
-<<<<<<< HEAD
-=======
+.idea/
 
 led / optimized / DLL files
 __pycache__/
@@ -96,4 +94,3 @@ ENV/
 
 */storage.json
 cal_env/
->>>>>>> 52c0e028c3f6b828347b8be16ac26ffac31a18b1
